force-app/main/default/objects/Program__c/fields/Amount_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Frequency__c</fullName>
    <label>Amount Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per Day</fullName>
            </value>
            <value>
                <fullName>per Week</fullName>
            </value>
            <value>
                <fullName>per Month</fullName>
            </value>
            <value>
                <fullName>per Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>