force-app/main/default/objects/Program__c/fields/Associated_Course_ID_s_within_LMS__c.field-meta.xml
<CustomField>
    <fullName>Associated_Course_ID_s_within_LMS__c</fullName>
    <label>Associated Course ID(s) within LMS</label>
    <type>TextArea</type>
</CustomField>