force-app/main/default/objects/Program__c/fields/Cohort_Count__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Count__c</fullName>
    <label>Cohort Count</label>
    <summaryForeignKey>Cohort__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>