force-app/main/default/objects/Program__c/fields/Cohort_Id__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort Id</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>