force-app/main/default/objects/Program__c/fields/Cost_to_Students__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Students__c</fullName>
    <label>Cost to Students?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>