force-app/main/default/objects/Program__c/fields/Does_amount_vary_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Does_amount_vary_per_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does amount vary per Student?</label>
    <type>Checkbox</type>
</CustomField>