force-app/main/default/objects/Program__c/fields/DPI_staff_contact__c.field-meta.xml
<CustomField>
    <fullName>DPI_staff_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPI staff contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>