force-app/main/default/objects/Program__c/fields/Graduation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Rate__c</fullName>
    <formula>Number_of_students_completed__c / Number_of_students_started__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graduation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>