force-app/main/default/objects/Program__c/fields/Hours_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Sunday__c</fullName>
    <label>Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>