force-app/main/default/objects/Program__c/fields/LMS__c.field-meta.xml
<CustomField>
    <fullName>LMS__c</fullName>
    <label>LMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BlackBoard</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other (fill-in)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>