force-app/main/default/objects/Program__c/fields/Number_of_students_started__c.field-meta.xml
<CustomField>
    <fullName>Number_of_students_started__c</fullName>
    <label>Number of students started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>