force-app/main/default/objects/Program__c/fields/Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Description__c</fullName>
    <label>Payment Description</label>
    <type>TextArea</type>
</CustomField>