force-app/main/default/objects/Program__c/fields/Program_Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Communication_Type__c</fullName>
    <label>Program Communication Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synchronous</fullName>
            </value>
            <value>
                <fullName>Asynchronous</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>