force-app/main/default/objects/Program__c/fields/Program_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Cost_Type__c</fullName>
    <label>Program Cost Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>