force-app/main/default/objects/Program__c/fields/Program_Dates_Flexible__c.field-meta.xml
<CustomField>
    <fullName>Program_Dates_Flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Dates Flexible</label>
    <type>Checkbox</type>
</CustomField>