force-app/main/default/objects/Program__c/fields/Program_Department__c.field-meta.xml
<CustomField>
    <fullName>Program_Department__c</fullName>
    <label>Program Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Ed</fullName>
            </value>
            <value>
                <fullName>Pritzker Tech Talent Labs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>