force-app/main/default/objects/Program__c/fields/Program_Funding__c.field-meta.xml
<CustomField>
    <fullName>Program_Funding__c</fullName>
    <label>Program Funding</label>
    <type>TextArea</type>
</CustomField>