force-app/main/default/objects/Program__c/fields/Program_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Program_Hours_Per_Week__c</fullName>
    <label>Program Hours Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>