force-app/main/default/objects/Program__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <label>Program Location</label>
    <type>TextArea</type>
</CustomField>