force-app/main/default/objects/Program__c/fields/Program_Presence__c.field-meta.xml
<CustomField>
    <fullName>Program_Presence__c</fullName>
    <label>Program Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>