force-app/main/default/objects/Program__c/fields/Program_Specific_Training__c.field-meta.xml
<CustomField>
    <fullName>Program_Specific_Training__c</fullName>
    <label>Program Specific Training</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile App Dev &amp; Design</fullName>
            </value>
            <value>
                <fullName>CS 100</fullName>
            </value>
            <value>
                <fullName>CS 111</fullName>
            </value>
            <value>
                <fullName>Data Science Discovery</fullName>
            </value>
            <value>
                <fullName>Exploring Electrical &amp; Computer Engineering</fullName>
            </value>
            <value>
                <fullName>Foundations of Computer Science &amp; Coding</fullName>
            </value>
            <value>
                <fullName>Discover Computing I</fullName>
            </value>
            <value>
                <fullName>Discover Computing II</fullName>
            </value>
            <value>
                <fullName>Discover Computing I + II</fullName>
            </value>
            <value>
                <fullName>UIUC CS Endorsement</fullName>
            </value>
            <value>
                <fullName>Swift PD Course</fullName>
            </value>
            <value>
                <fullName>CS Teacher Toolkit</fullName>
            </value>
            <value>
                <fullName>Other Professional Development (fill-in)</fullName>
            </value>
            <value>
                <fullName>Project Internship (general)</fullName>
            </value>
            <value>
                <fullName>Data Anayltics</fullName>
            </value>
            <value>
                <fullName>Web + App Dev</fullName>
            </value>
            <value>
                <fullName>Software Test Automation</fullName>
            </value>
            <value>
                <fullName>Research Scholars</fullName>
            </value>
            <value>
                <fullName>DPI Full Stack Software Dev Pre-Apprenticeship</fullName>
            </value>
            <value>
                <fullName>DPI Full Stack Software Dev Apprenticeship, Class Training</fullName>
            </value>
            <value>
                <fullName>DPI Full Stack Software Dev Apprenticeship, On-The-Job</fullName>
            </value>
            <value>
                <fullName>Cognizant Full Stack Software Dev Pre-Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Cognizant Full Stack Software Dev Apprenticeship, Class Training</fullName>
            </value>
            <value>
                <fullName>Cognizant Full Stack Software Dev Apprenticeship, On-The-Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>