force-app/main/default/objects/Program__c/fields/Program_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Program_Type_Other__c</fullName>
    <label>Program Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>