force-app/main/default/objects/Program__c/fields/ProgramTimeType_Fri__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Fri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>