force-app/main/default/objects/Program__c/fields/ProgramTimeType_Mon__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Mon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>