force-app/main/default/objects/Program__c/fields/ProgramTimeType_Sat__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Sat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>