force-app/main/default/objects/Program__c/fields/ProgramTimeType_Sun__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Sun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>