force-app/main/default/objects/Program__c/fields/ProgramTimeType_Thu__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Thu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>