force-app/main/default/objects/Program__c/fields/ProgramTimeType_Tue__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Tue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>