force-app/main/default/objects/Program__c/fields/ProgramTimeType_Wed__c.field-meta.xml
<CustomField>
    <fullName>ProgramTimeType_Wed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>